docs(quizzes/home): added missing docs on quiz likes and homepage
